[tool.poetry]
name = "odm_address_book"
version = "0.1.0"
description = ""
authors = ["Vitaliy Lobko <vitaliy.lobko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
